--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^4.3.4",
-    "git-remote-helper": "^0.4.0"
+    "level": "^8.0.0",
+    "rxjs": "^6.6.3",
+    "rxjs-async-map": "^0.2.0",
+    "rxjs-stream": "^3.2.1",
+    "superpathjoin": "^2.0.1"
   },
   "scripts": {
     "build": "yarn run clean && tsc",
