--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "buffer-split": "^1.0.0",
     "debug": "^4.3.4",
     "rxjs": "^6.6.3",
     "rxjs-async-map": "^0.2.0",
@@ -32,6 +33,7 @@
     "clean": "rm -rf ./dist ./bin"
   },
   "devDependencies": {
+    "@types/buffer-split": "^1.0.0",
     "@types/debug": "^4.1.7",
     "@types/node": "^18.11.10",
     "ts-node": "^10.9.1",
