--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "buffer-split": "^1.0.0",
     "bip39": "^3.0.4",
+    "buffer-split": "^1.0.0",
     "colors-cli": "^1.0.28",
     "commander": "^9.4.1",
     "debug": "^4.3.4",
+    "esbuild": "^0.16.4",
     "eth-ens-namehash": "^2.0.8",
     "ethers": "^5.7.2",
     "git-config-path": "^2.0.0",
@@ -40,6 +41,8 @@
     "install-mac": "yarn pkg && cp ./bin/git-remote-git3-macos-x64 /usr/local/bin/git-remote-git3",
     "install-mac-arm": "yarn pkg && cp ./bin/git-remote-git3-macos-arm64 /usr/local/bin/git-remote-git3",
     "pkg": "yarn run build && pkg .",
+    "build:git3": "esbuild ./src/git3/index.js --bundle --platform=node --target=es6 --outfile=dist/git3.js",
+    "pkg:git3": "yarn build:git3 && pkg dist/git3.js --output bin/git3 && sudo cp bin/git3 /usr/local/bin/git3",
     "clean": "rm -rf ./dist ./bin"
   },
   "devDependencies": {
