--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-remote-git3",
+  "name": "git3-cli",
   "version": "1.0.0",
   "main": "dist/index.js",
   "type": "module",
@@ -38,8 +38,8 @@
   },
   "scripts": {
     "build": "yarn run clean && tsc",
-    "install-mac": "yarn pkg && cp ./bin/git-remote-git3-macos-x64 /usr/local/bin/git-remote-git3",
-    "install-mac-arm": "yarn pkg && cp ./bin/git-remote-git3-macos-arm64 /usr/local/bin/git-remote-git3",
+    "install-mac": "yarn pkg && cp ./bin/git3-cli-macos-x64 /usr/local/bin/git-remote-git3",
+    "install-mac-arm": "yarn pkg && cp ./bin/git3-cli-macos-arm64 /usr/local/bin/git-remote-git3",
     "pkg": "yarn run build && pkg .",
     "build:git3": "esbuild ./src/git3/index.js --bundle --platform=node --target=es6 --outfile=dist/git3.js",
     "pkg:git3": "yarn build:git3 && pkg dist/git3.js --output bin/git3 && sudo cp bin/git3 /usr/local/bin/git3",
