tx-manager flow control & smart rbf retry

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "bin": "dist/git3/index.js",
   "dependencies": {
     "@ethersproject/experimental": "^5.7.0",
+    "axios": "^1.3.2",
     "bip39": "^3.0.4",
     "buffer-split": "^1.0.0",
     "colors-cli": "^1.0.29",
@@ -16,6 +17,7 @@
     "debug": "^4.3.4",
     "eth-ens-namehash": "^2.0.8",
     "ethers": "^5.7.2",
+    "form-data": "^4.0.0",
     "git-config-path": "^2.0.0",
     "inquirer": "^9.1.4",
     "js-sha3": "^0.8.0",
@@ -29,7 +31,7 @@
     "clean": "rm -rf ./dist ./bin",
     "build:git3": "esbuild src/git3/index.ts --bundle --platform=node --outfile=dist/git3.cjs --format=cjs",
     "build:git-remote": "esbuild src/git-remote-git3/index.ts --bundle --platform=node --outfile=dist/git-remote-git3.cjs --format=cjs",
-    "build": "yarn clean && yarn build:git3 & yarn build:git-remote & wait",
+    "build": "yarn clean && ( yarn build:git3 & yarn build:git-remote & wait)",
     "pkg:git3": "pkg dist/git3.cjs -c git3.pkg.json",
     "pkg:git-remote": "pkg dist/git-remote-git3.cjs -c git-remote-git3.pkg.json",
     "pkg:all": "yarn pkg:git3 && yarn pkg:git-remote",
