--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "rxjs": "^7.8.0",
     "rxjs-async-map": "^0.2.0",
     "rxjs-stream": "^5.0.0",
-    "superpathjoin": "^2.0.1"
+    "superpathjoin": "^2.0.1",
+    "url-parse": "^1.5.10"
   },
   "scripts": {
     "clean": "rm -rf ./dist ./bin",
@@ -45,6 +46,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.18",
     "@types/parse-git-config": "^3.0.1",
+    "@types/url-parse": "^1.4.8",
     "esbuild": "^0.17.0",
     "pkg": "^5.8.0",
     "ts-node": "^10.9.1",
