--- a/package.json
+++ b/package.json
@@ -1,55 +1,58 @@
 {
-  "name": "git3-cli",
-  "version": "0.1.1",
-  "license": "MIT",
-  "type": "module",
-  "engines": {
-    "node": ">=14.16"
-  },
-  "bin": "dist/git3/index.js",
-  "dependencies": {
-    "@ethersproject/experimental": "^5.7.0",
-    "axios": "^1.3.2",
-    "bip39": "^3.0.4",
-    "buffer-split": "^1.0.0",
-    "colors-cli": "^1.0.29",
-    "commander": "^10.0.0",
-    "debug": "^4.3.4",
-    "eth-ens-namehash": "^2.0.8",
-    "ethers": "^5.7.2",
-    "form-data": "^4.0.0",
-    "git-config-path": "^2.0.0",
-    "inquirer": "^9.1.4",
-    "js-sha3": "^0.8.0",
-    "parse-git-config": "^3.0.0",
-    "rxjs": "^7.8.0",
-    "rxjs-async-map": "^0.2.0",
-    "rxjs-stream": "^5.0.0",
-    "superpathjoin": "^2.0.1",
-    "url-parse": "^1.5.10"
-  },
-  "scripts": {
-    "clean": "rm -rf ./dist ./bin",
-    "build:git3": "esbuild src/git3/index.ts --bundle --platform=node --outfile=dist/git3.cjs --format=cjs",
-    "build:git-remote": "esbuild src/git-remote-git3/index.ts --bundle --platform=node --outfile=dist/git-remote-git3.cjs --format=cjs",
-    "build": "yarn clean && ( yarn build:git3 & yarn build:git-remote & wait)",
-    "pkg:git3": "pkg dist/git3.cjs -c git3.pkg.json",
-    "pkg:git-remote": "pkg dist/git-remote-git3.cjs -c git-remote-git3.pkg.json",
-    "pkg:all": "yarn pkg:git3 && yarn pkg:git-remote",
-    "pkg": "yarn build && yarn pkg:all",
-    "install-mac": "yarn pkg && cp bin/git3-macos /usr/local/bin/git3 && cp bin/git-remote-git3-macos /usr/local/bin/git-remote-git3",
-    "install-linux": "yarn pkg && cp bin/git3-linux /usr/local/bin/git3 && cp bin/git-remote-git3-linux /usr/local/bin/git-remote-git3"
-  },
-  "devDependencies": {
-    "@types/buffer-split": "^1.0.0",
-    "@types/debug": "^4.1.7",
-    "@types/inquirer": "^9.0.3",
-    "@types/node": "^18.11.18",
-    "@types/parse-git-config": "^3.0.1",
-    "@types/url-parse": "^1.4.8",
-    "esbuild": "^0.17.0",
-    "pkg": "^5.8.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  }
+    "name": "git3-cli",
+    "version": "0.1.1",
+    "license": "MIT",
+    "type": "module",
+    "engines": {
+        "node": ">=14.16"
+    },
+    "bin": "dist/git3/index.js",
+    "dependencies": {
+        "@ethersproject/experimental": "^5.7.0",
+        "axios": "^1.3.2",
+        "bip39": "^3.0.4",
+        "buffer-split": "^1.0.0",
+        "colors-cli": "^1.0.29",
+        "commander": "^10.0.0",
+        "debug": "^4.3.4",
+        "eth-ens-namehash": "^2.0.8",
+        "ethers": "^5.7.2",
+        "form-data": "^4.0.0",
+        "git-config-path": "^2.0.0",
+        "inquirer": "^9.1.4",
+        "js-sha3": "^0.8.0",
+        "parse-git-config": "^3.0.0",
+        "rxjs": "^7.8.0",
+        "rxjs-async-map": "^0.2.0",
+        "rxjs-stream": "^5.0.0",
+        "superpathjoin": "^2.0.1",
+        "url-parse": "^1.5.10"
+    },
+    "scripts": {
+        "clean": "rm -rf ./dist ./bin",
+        "build:git3": "esbuild src/git3/index.ts --bundle --platform=node --outfile=dist/git3.cjs --format=cjs",
+        "build:git-remote": "esbuild src/git-remote-git3/index.ts --bundle --platform=node --outfile=dist/git-remote-git3.cjs --format=cjs",
+        "build": "yarn clean && ( yarn build:git3 & yarn build:git-remote & wait)",
+        "pkg:git3": "pkg dist/git3.cjs -c git3.pkg.json",
+        "pkg:git-remote": "pkg dist/git-remote-git3.cjs -c git-remote-git3.pkg.json",
+        "pkg:all": "yarn pkg:git3 && yarn pkg:git-remote",
+        "pkg": "yarn build && yarn pkg:all",
+        "install-mac": "yarn pkg && cp bin/git3-macos /usr/local/bin/git3 && cp bin/git-remote-git3-macos /usr/local/bin/git-remote-git3",
+        "install-linux": "yarn pkg && cp bin/git3-linux /usr/local/bin/git3 && cp bin/git-remote-git3-linux /usr/local/bin/git-remote-git3",
+        "sync": "ts-node src/scripts/sync.ts",
+        "clear-sync": "ts-node src/scripts/clear.ts"
+    },
+    "devDependencies": {
+        "@types/buffer-split": "^1.0.0",
+        "@types/debug": "^4.1.7",
+        "@types/inquirer": "^9.0.3",
+        "@types/node": "^18.11.18",
+        "@types/parse-git-config": "^3.0.1",
+        "@types/url-parse": "^1.4.8",
+        "es-main": "^1.2.0",
+        "esbuild": "^0.17.0",
+        "pkg": "^5.8.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.4"
+    }
 }
